// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Motif Landing Entries for Source 1`] = `
<main
  className="root-0-0-2  Viewport-viewport undefined"
  role="application"
>
  <div
    aria-label="content"
    className="Landing-landing Content-content"
  >
    <div
      aria-level="1"
      className="PageHeading-pageHeading"
      role="heading"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Jacques Derrida on “ABYSS”",
          }
        }
        style={
          Object {
            "display": "inline",
          }
        }
      />
    </div>
    <div
      aria-level="2"
      className="PageSubHeading-pageSubHeading"
      role="heading"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": <React.Fragment>
              in 
              <Jss(Link)
                href="/source/SPOM"
              >
                Specters of Marx
              </Jss(Link)>
            </React.Fragment>,
          }
        }
        style={
          Object {
            "display": "inline",
          }
        }
      />
    </div>
    <nav
      aria-label="compare with"
      className="PageNav-pageNav"
    >
      <div
        className="CommaSeparatedList-commaSeparatedList"
        role="list"
      >
        [cf.
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:HDG"
            onClick={[Function]}
          >
            Heidegger
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:RN"
            onClick={[Function]}
          >
            Ronell
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:KKGD"
            onClick={[Function]}
          >
            Kierkegaard
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:AUG"
            onClick={[Function]}
          >
            Augustine
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:HUSS"
            onClick={[Function]}
          >
            Husserl
          </a>
        </div>
        ]
      </div>
    </nav>
    <div
      className="ContentHeading-contentHeading ContentHeading-pageSubHeading"
      role="banner"
    >
      <div
        aria-level="3"
        className="ContentHeading-text"
        role="heading"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": <React.Fragment>
                210 entries for “Abyss” in
                 
                <Jss(Link)
                  href="/source/SPOM"
                >
                  Specters of Marx
                </Jss(Link)>
              </React.Fragment>,
            }
          }
          style={
            Object {
              "display": "inline",
            }
          }
        />
      </div>
    </div>
    <div
      aria-label="content"
      className="ContentNav-contentNav"
    >
      <nav
        aria-label="content navigator"
        className="ContentNav-nav"
      >
        <div
          className="ContentNav-list"
        >
          <div
            className="ContentNav-left"
          >
            <button
              className="BackButton-backButton BackButton-linkButton Button-button Control-control"
              onTouchStart={[Function]}
            >
              <div
                className="Control-label"
              >
                Sources
              </div>
              <arrow.svg />
            </button>
          </div>
          <div
            className="ContentNav-right"
          >
            <label
              className="Entries-motifLinksSwitch SwitchControl-switchControl ToggleControl-toggleControl ToggleControl-control"
              onTouchStart={[Function]}
            >
              <div
                className="ToggleControl-label"
              >
                Motif Links
              </div>
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="checkbox"
              />
              <div
                className="SwitchControl-switchHandle"
              />
            </label>
          </div>
        </div>
      </nav>
      <div
        aria-label="entries for p. 106"
        className="EntryGroup-entryList"
      >
        <article
          aria-label="entry"
          className="Entry-entry"
        >
          <div
            aria-label="entry location"
            className="Entry-location"
          >
            p. 106
          </div>
          <div
            className="Entry-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Derrida less concerned w/ art of Plato [re: <em>mises en abyme</em> of <em>khōra</em> and politics] but in a constraint, a <em>programme</em>, the being-programme of the programme, the being-logical of logic: Plato apprehends them as such, though in a dream, put <em>en abyme</em>",
              }
            }
            style={
              Object {
                "display": "inline",
              }
            }
          />
        </article>
      </div>
      <div
        aria-label="entries for p.27"
        className="EntryGroup-entryList"
      >
        <article
          aria-label="entry"
          className="Entry-entry"
        >
          <div
            aria-label="entry emphasis"
          >
            ***
          </div>
          <div
            aria-label="entry location"
            className="Entry-location"
          >
            p.27
          </div>
          <div
            className="Entry-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "analogy of abyss &amp; bridge over abyss require 3rd term, that which heals the gap, a symbol, bridge is symbol, symbol bridge &gt; abyss calls for analogy (active resource of <em>Critique</em>), <em>mais l’analogie s’abîme sans fin dès lors qu’il faut bien un certain art pour décrire analogiquement le jeu de l’analogie</em>",
              }
            }
            style={
              Object {
                "display": "inline",
              }
            }
          />
        </article>
      </div>
    </div>
  </div>
</main>
`;

exports[`Storyshots Motif Landing Show All Entries 1`] = `
<main
  className="root-0-0-1  Viewport-viewport undefined"
  role="application"
>
  <div
    aria-label="content"
    className="Landing-landing Content-content"
  >
    <div
      aria-level="1"
      className="PageHeading-pageHeading"
      role="heading"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Jacques Derrida on “ABYSS”",
          }
        }
        style={
          Object {
            "display": "inline",
          }
        }
      />
    </div>
    <nav
      aria-label="compare with"
      className="PageNav-pageNav"
    >
      <div
        className="CommaSeparatedList-commaSeparatedList"
        role="list"
      >
        [cf.
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:HDG"
            onClick={[Function]}
          >
            Heidegger
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:RN"
            onClick={[Function]}
          >
            Ronell
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:KKGD"
            onClick={[Function]}
          >
            Kierkegaard
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:AUG"
            onClick={[Function]}
          >
            Augustine
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:HUSS"
            onClick={[Function]}
          >
            Husserl
          </a>
        </div>
        ]
      </div>
    </nav>
    <div
      className="ContentHeading-contentHeading ContentHeading-pageSubHeading"
      role="banner"
    >
      <div
        aria-level="3"
        className="ContentHeading-text"
        role="heading"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Databyss includes 210 entries of the motif “ABYSS” from 42 sources by Jacques Derrida",
            }
          }
          style={
            Object {
              "display": "inline",
            }
          }
        />
      </div>
    </div>
    <div
      aria-label="content"
      className="ContentNav-contentNav"
    >
      <nav
        aria-label="content navigator"
        className="ContentNav-nav"
      >
        <div
          className="ContentNav-list"
        >
          <div
            className="ContentNav-left"
          >
            <button
              className="BackButton-backButton BackButton-linkButton Button-button Control-control"
              onTouchStart={[Function]}
            >
              <div
                className="Control-label"
              >
                Sources
              </div>
              <arrow.svg />
            </button>
          </div>
          <div
            className="ContentNav-right"
          >
            <label
              className="Entries-motifLinksSwitch SwitchControl-switchControl ToggleControl-toggleControl ToggleControl-control"
              onTouchStart={[Function]}
            >
              <div
                className="ToggleControl-label"
              >
                Motif Links
              </div>
              <input
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="checkbox"
              />
              <div
                className="SwitchControl-switchHandle"
              />
            </label>
          </div>
        </div>
      </nav>
      <div
        aria-label="entries for Spectors of Marx"
        className="EntryGroup-entryList"
      >
        <div
          aria-label="entries for p. 106"
          className="EntryGroup-entryList"
        >
          <article
            aria-label="entry"
            className="Entry-entry"
          >
            <a
              aria-label="source"
              className="EntrySource-source"
              onClick={[Function]}
            >
              SPOM
            </a>
            <div
              aria-label="entry location"
              className="Entry-location"
            >
              p. 106
            </div>
            <div
              className="Entry-content"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Derrida less concerned w/ art of Plato [re: <em>mises en abyme</em> of <em>khōra</em> and politics] but in a constraint, a <em>programme</em>, the being-programme of the programme, the being-logical of logic: Plato apprehends them as such, though in a dream, put <em>en abyme</em>",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </article>
        </div>
        <div
          aria-label="entries for p.27"
          className="EntryGroup-entryList"
        >
          <article
            aria-label="entry"
            className="Entry-entry"
          >
            <div
              aria-label="entry emphasis"
            >
              ***
            </div>
            <div
              aria-label="entry location"
              className="Entry-location"
            >
              p.27
            </div>
            <div
              className="Entry-content"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "analogy of abyss &amp; bridge over abyss require 3rd term, that which heals the gap, a symbol, bridge is symbol, symbol bridge &gt; abyss calls for analogy (active resource of <em>Critique</em>), <em>mais l’analogie s’abîme sans fin dès lors qu’il faut bien un certain art pour décrire analogiquement le jeu de l’analogie</em>",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </article>
        </div>
      </div>
      <div
        aria-label="entries for Cosmopolitanism and Forgiveness"
        className="EntryGroup-entryList"
      >
        <div
          aria-label="entries for p. 50"
          className="EntryGroup-entryList"
        >
          <article
            aria-label="entry"
            className="Entry-entry"
          >
            <a
              aria-label="source"
              className="EntrySource-source"
              onClick={[Function]}
            >
              CF
            </a>
            <div
              aria-label="entry location"
              className="Entry-location"
            >
              p. 50
            </div>
            <div
              className="Entry-content"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "must forgiveness saturate the abyss (suture, reconcile)? but who could object to imperative of reconciliation? amnesties, work of mourning—political strategy, psycho-therapeutic economy",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </article>
        </div>
        <div
          aria-label="entries for pp. 53-54"
          className="EntryGroup-entryList"
        >
          <article
            aria-label="entry"
            className="Entry-entry"
          >
            <div
              aria-label="entry location"
              className="Entry-location"
            >
              pp. 53-54
            </div>
            <div
              className="Entry-content"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "when not insoluble, when I know what to do (program), no decision or responsibility",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </article>
          <article
            aria-label="entry"
            className="Entry-entry"
          >
            <div
              aria-label="entry location"
              className="Entry-location undefined"
            >
              —— 
            </div>
            <div
              className="Entry-content"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "an abyss remains and must remain",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </article>
        </div>
      </div>
    </div>
  </div>
</main>
`;

exports[`Storyshots Motif Landing Source TOC 1`] = `
<main
  className="root-0-0-3  Viewport-viewport undefined"
  role="application"
>
  <div
    aria-label="content"
    className="Landing-landing Content-content"
  >
    <div
      aria-level="1"
      className="PageHeading-pageHeading"
      role="heading"
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Jacques Derrida on “ABYSS”",
          }
        }
        style={
          Object {
            "display": "inline",
          }
        }
      />
    </div>
    <nav
      aria-label="compare with"
      className="PageNav-pageNav"
    >
      <div
        className="CommaSeparatedList-commaSeparatedList"
        role="list"
      >
        [cf.
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:HDG"
            onClick={[Function]}
          >
            Heidegger
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:RN"
            onClick={[Function]}
          >
            Ronell
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:KKGD"
            onClick={[Function]}
          >
            Kierkegaard
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:AUG"
            onClick={[Function]}
          >
            Augustine
          </a>
        </div>
        <div
          className="CommaSeparatedList-listItem"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss:HUSS"
            onClick={[Function]}
          >
            Husserl
          </a>
        </div>
        ]
      </div>
    </nav>
    <div
      className="ContentHeading-contentHeading ContentHeading-pageSubHeading"
      role="banner"
    >
      <div
        aria-level="3"
        className="ContentHeading-text"
        role="heading"
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "Databyss includes 210 entries of the motif “ABYSS” from 44 sources by Jacques Derrida",
            }
          }
          style={
            Object {
              "display": "inline",
            }
          }
        />
      </div>
    </div>
    <div
      aria-label="content"
      className="ContentNav-contentNav"
    >
      <nav
        aria-label="content navigator"
        className="ContentNav-nav"
      >
        <div
          className="ContentNav-list"
        >
          <div
            className="ContentNav-left"
          />
          <div
            className="ContentNav-right"
          >
            <button
              className="ForwardButton-forwardButton ForwardButton-linkButton Button-button Control-control"
              onTouchStart={[Function]}
            >
              <div
                className="Control-label"
              >
                All Entries
              </div>
              <arrow.svg />
            </button>
          </div>
        </div>
      </nav>
      <div
        aria-label="sources"
        className="Sources-sourcesToc TocList-tocList"
        role="list"
      >
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/P"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Parergon  (17)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/REST"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Restitutions  (14)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/KH"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<em>Kh</em><em>ō</em><em>ra</em>  (10)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/TN"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "On Touching—Jean-Luc Nancy  (10)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/D"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Dissemination  (9)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/OG"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Of Grammatology  (7)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/SPEC"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "To Speculate—on “Freud”  (6)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/DS"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Double Session  (5)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/FV"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<em>Le Facteur de la V</em><em>é</em><em>rit</em><em>é</em>  (5)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/ATIA"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "The Animal That Therefore I Am  (5)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/BSi"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "The Beast & the Sovereign  (5)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/+R"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "+R  (4)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/C"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Cartouches  (4)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/DST"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<em>D</em><em>é</em><em>sistance </em> (4)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/CF"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Cosmopolitanism and Forgiveness  (3)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/Gii"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Heidegger’s Hand (<em>Geschlecht</em> II)  (3)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/SP"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Spurs: Nietzsche’s Styles  (3)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/AD"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Adieu to Emmanuel Levinas  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/GOD"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Gift of Death and Literature in Secret  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/GT"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Given Time  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/HST"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Hostipitality  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/IW"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Interpretations at War: Kant, the Jew, the German  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/POO"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Passions: “An Oblique Offering”  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/PSSS"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Psychoanalysis Searches the States of its Soul  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/SEC"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Signature Event Context  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/AFR"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "The Archeology of the Frivolous: Reading Condillac  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/POOF"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "The Politics of Friendship  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/POR"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "The Principle of Reason  (2)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/SW"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "A Silkworm of One’s Own  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/A"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Aporias  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/AF"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Archive Fever  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/DPi"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Death Penalty: Volume I  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/TB"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Des Tours Des Babel  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/EM"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Ends of Man  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/FWT"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "For What Tomorrow…  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/MPM"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Memoires for Paul de Man  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/S"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Of Spirit: Heidegger and the Question  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/PAS"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<em>Pas </em> (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/PP"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Plato’s Pharmacy  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/PIO"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Psyche: Invention of the Other  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/ROP"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Resistances of Psychoanalysis  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/SPOM"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Specters of Marx  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/RM"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "The <em>Retrait</em> of Metaphor  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
        <div
          className="TocList-item"
          role="listitem"
        >
          <a
            className="Link-link Link-inline"
            href="/motif/abyss/WM"
            onClick={[Function]}
          >
            <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "White Mythology  (1)",
                }
              }
              style={
                Object {
                  "display": "inline",
                }
              }
            />
          </a>
        </div>
      </div>
    </div>
  </div>
</main>
`;
